Select JRE modules using jdeps & jlink (#9)
* patch: update Dockerfile to build custom JRE with minimal modules

* patch: update build stage image